<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UltraNote</string>
    <string name="home">Home</string>
    <string name="my_notes">My Notes</string>
    <string name="create_note">Create Note</string>
    <string name="categories">Categories</string>
    <string name="settings">UltraNote Settings</string>
    <string name="search_icon">search icon</string>
    <string name="search_notes">Search notes</string>
    <string name="add_notes_button">Add notes button</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle_optional">Note Subtitle (optional)</string>
    <string name="type_your_note_here">Type your note here…</string>
    <string name="text_note">Text</string>
    <string name="note_creation_question">What kind of note would you like to create?</string>
    <string name="search_favourites">Search Favourites</string>
    <string name="pick_a_colour">Pick a colour</string>
    <string name="add_item">Add Item</string>
    <string name="add_url">Add a URL</string>
    <string name="enter_url_here">Enter URL here…</string>
    <string name="add">ADD</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="note_options">Note Options</string>
    <string name="delete_note">Delete note</string>
    <string name="delete_confirmation_msg">Are you sure that you want to delete this note?</string>
    <string name="quick_note">Quick note…</string>
    <string name="new_notes_will_appear_here">New notes will appear here!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="qtitle_error">Cannot create note, field was left empty!</string>
    <string name="denied">Permission denied!</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="nav_to_settings">Navigate to Settings page</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="display">Display</string>
</resources>