<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColour"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/homeBtn"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="185dp"
        android:background="@color/primaryColourLight"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="35sp"
        android:onClick="openHome"
        app:cornerRadius="0dp" />

    <Button
        android:id="@+id/myNotesBtn"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="258dp"
        android:background="@color/primaryColourLight"
        android:text="@string/my_notes"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="35sp"
        android:onClick="openMyNotes"
        app:cornerRadius="0dp" />

    <Button
        android:id="@+id/createNoteBtn"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="331dp"
        android:background="@color/primaryColourLight"
        android:text="@string/create_note"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="35sp"
        android:onClick="openCreateNote"
        app:cornerRadius="0dp" />

    <Button
        android:id="@+id/categoriesBtn"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="404dp"
        android:background="@color/primaryColourLight"
        android:text="@string/categories"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textAllCaps="false"
        android:onClick="openCategories"
        app:cornerRadius="0dp" />

    <Button
        android:id="@+id/settingsBtn"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="477dp"
        android:background="@color/primaryColourLight"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textAllCaps="false"
        android:onClick="openSettings"
        app:cornerRadius="0dp" />

</RelativeLayout>