<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColour"
    tools:context=".activities.CreateNote">

    <ScrollView
        android:id="@+id/noteScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                app:tint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_note"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toEndOf="@id/backButton"
                app:layout_constraintTop_toTopOf="@id/backButton"
                app:layout_constraintBottom_toBottomOf="@id/backButton" />

            <ImageView
                android:id="@+id/addURL"
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_weblink"
                app:tint="@color/textHintColour"
                app:layout_constraintEnd_toStartOf="@id/addImage"
                app:layout_constraintBottom_toBottomOf="@id/addImage"
                app:layout_constraintTop_toTopOf="@id/addImage"/>

            <ImageView
                android:id="@+id/addImage"
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_image"
                app:tint="@color/textHintColour"
                app:layout_constraintEnd_toStartOf="@id/saveButton"
                app:layout_constraintBottom_toBottomOf="@id/saveButton"
                app:layout_constraintTop_toTopOf="@id/saveButton"/>

            <ImageView
                android:id="@+id/saveButton"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/done_button"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_done"
                app:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/backButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/backButton" />

            <View
                android:id="@+id/noteColourIndicator"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/note_colour_indicator"
                app:layout_constraintBottom_toTopOf="@+id/noteTitleInput"/>

            <EditText
                android:id="@+id/noteTitleInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:paddingTop="@dimen/_8sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/textHintColour"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toBottomOf="@id/backButton" />

            <TextView
                android:id="@+id/textDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_2sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/noteTitleInput"
                app:layout_constraintStart_toStartOf="@id/noteTitleInput"
                app:layout_constraintTop_toBottomOf="@id/noteTitleInput" />

            <EditText
                android:id="@+id/noteSubtitleInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/note_subtitle_optional"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/textHintColour"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/viewSubtitleIndicator"
                app:layout_constraintTop_toBottomOf="@id/textDateTime" />

            <View
                android:id="@+id/viewSubtitleIndicator"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/noteSubtitleInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/noteSubtitleInput" />

            <ImageView
                android:id="@+id/noteImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/noteSubtitleInput" />

            <ImageView
                android:id="@+id/deleteImageIcon"
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/background_delete"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_delete"
                android:rotation="45"
                android:visibility="gone"
                app:tint="@color/white"
                app:layout_constraintEnd_toEndOf="@id/noteImage"
                app:layout_constraintTop_toTopOf="@id/noteImage" />

            <LinearLayout
                android:id="@+id/webUrlLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/noteImage">

                <TextView
                    android:id="@+id/webUrl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_13ssp"
                    android:textColorLink="@color/accent" />

                <ImageView
                    android:id="@+id/deleteURL"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_7sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_delete"
                    android:rotation="45"
                    app:tint="@color/deleteColour" />

            </LinearLayout>

            <EditText
                android:id="@+id/noteInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="top"
                android:hint="@string/type_your_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/textHintColour"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/webUrlLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/noteoptions" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>